# example-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sample-config.toml
database/: books.json  physicians.json
database/pristine/: physicians.json
example_api/: .gitignore  __init__.py  __main__.py  config.py  conftest.py  exceptions.py  logging.py
example_api/db/static/: books.py  physicians.py
example_api/server/: __init__.py  app.py  responses.py
example_api/server/routes/: __init__.py  books.py  physicians.py  root.py
example_api/tests/endpoints/: endpoints_test.py  root_test.py
example_api/util/: __init__.py  json.py  package.py
nginx/conf.d/: default.conf
public/: index.html
webui/: Dockerfile  package.json  tsconfig.json  vite.config.js
webui/src/: App.jsx  App.tsx
webui/src/components/: AddAppointmentForm.jsx  AddAppointmentForm.tsx  Calendar.jsx  Calendar.tsx  PhysiciansList.jsx  PhysiciansList.tsx
webui/src/services/: physicians.js  physicians.ts
